[workspace]
members = ["lib", "cli", "e2e-tests/rainbow"]
resolver = "2"

[workspace.package]
version = "0.4.0-beta.1"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
rust-version = "1.72"
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/term-transcript"

[workspace.dependencies]
anyhow = "1.0.93"
assert_matches = "1.5.0"
bytecount = "0.6.8"
clap = "4.5.21"
doc-comment = "0.3.3"
handlebars = "6.2.0"
humantime = "2.1.0"
os_pipe = "1.2.1"
portable-pty = "0.8.0"
pretty_assertions = "1.4.1"
quick-xml = "0.36.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14.0"
termcolor = "1.4.1"
test-casing = "0.1.3"
toml = "0.8.19"
tracing = "0.1.40"
tracing-capture = "0.1.0"
tracing-subscriber = "0.3.18"
unicode-width = "0.1.14"
version-sync = "0.9.2"

# Profile for workspace executables
[profile.executable]
inherits = "release"
strip = true
codegen-units = 1
lto = true
