[workspace]
members = ["lib", "cli", "e2e-tests/rainbow"]
resolver = "2"

[workspace.package]
version = "0.4.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/term-transcript"

[workspace.dependencies]
# External dependencies
anyhow = "1.0.100"
assert_matches = "1.5.0"
base64 = "0.22.1"
bytecount = "0.6.9"
clap = "4.5.53"
doc-comment = "0.3.4"
font-subset = { version = "0.1.0", git = "https://github.com/slowli/font-tools.git", rev = "9102262dbf5bf931b82644b72e1c2e5b887a2c69" }
handlebars = "6.3.2"
humantime = "2.3.0"
os_pipe = "1.2.3"
portable-pty = "0.8.1" # FIXME: portable-pty 0.9 is seemingly broken on Windows
pretty_assertions = "1.4.1"
pulldown-cmark = "0.9.6"
quick-xml = "0.38.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.24.0"
termcolor = "1.4.1"
test-casing = { version = "0.1.3", git = "https://github.com/slowli/test-casing.git", rev = "d143322a3e152436823c5616b0e56739380fe59d" }
toml = "0.9.10"
tracing = "0.1.44"
tracing-capture = "0.1.0"
tracing-subscriber = "0.3.22"
unicode-width = "0.2"
version-sync = "0.9.2"

# Workspace dependencies
term-transcript = { version = "=0.4.0", path = "lib" }
term-transcript-cli = { version = "=0.4.0", path = "cli" }

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"

# Profile for workspace executables
[profile.executable]
inherits = "release"
strip = true
codegen-units = 1
lto = true
