[workspace]
members = [
  "lib",
  "cli",
  "crates/styled-str",
  "e2e-tests/rainbow"
]
resolver = "2"

[workspace.package]
version = "0.5.0-beta.1"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/term-transcript"

[workspace.dependencies]
# External dependencies
anstream = "0.6.21"
anstyle = { version = "1.0.13", default-features = false }
anyhow = "1.0.100"
assert_matches = "1.5.0"
base64 = "0.22.1"
bytecount = "0.6.9"
clap = "4.5.57"
compile-fmt = "0.1.0"
doc-comment = "0.3.4"
font-subset = "0.1.0"
handlebars = "6.4.0"
humantime = "2.3.0"
os_pipe = "1.2.3"
portable-pty = "0.8.1" # FIXME: portable-pty 0.9 is seemingly broken on Windows
pretty_assertions = "1.4.1"
pulldown-cmark = "0.9.6"
quick-xml = "0.39.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.24.0"
test-casing = "=0.2.0-beta.1"
toml = "0.9.11"
tracing = "0.1.44"
tracing-capture = "0.1.0"
tracing-subscriber = "0.3.22"
unicode-width = "0.2"
version-sync = "0.9.2"

# Workspace dependencies
styled-str = { version = "=0.5.0-beta.1", path = "crates/styled-str" }
term-transcript = { version = "=0.5.0-beta.1", path = "lib" }

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"

# Profile for workspace executables
[profile.executable]
inherits = "release"
strip = true
codegen-units = 1
lto = true
