[package]
name = "term-transcript-cli"
version = "0.3.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["snapshot", "terminal", "SVG"]
categories = ["command-line-utilities", "development-tools::testing", "visualization"]
description = "CLI wrapper for term-transcript"
repository = "https://github.com/slowli/term-transcript"

[[bin]]
name = "term-transcript"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive", "env", "wrap_help"] }
handlebars = "5.1.0"
humantime = "2.1.0"
is-terminal = "0.4.12"
serde_json = "1.0"
termcolor = "1.4.1"
toml = "0.8.10"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }

term-transcript = { version = "0.3.0", path = ".." }

[dev-dependencies]
tempfile = "3.10.1"

[features]
default = []
# Enables capturing output via pseudo-terminal (PTY).
portable-pty = ["term-transcript/portable-pty"]
# Enables tracing for main operations.
tracing = ["tracing-subscriber", "term-transcript/tracing"]
