[package]
name = "term-transcript-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["snapshot", "terminal", "SVG"]
categories = ["command-line-utilities", "development-tools::testing", "visualization"]
description = "CLI wrapper for term-transcript"

[[bin]]
name = "term-transcript"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
handlebars.workspace = true
humantime.workspace = true
is-terminal.workspace = true
serde_json.workspace = true
termcolor.workspace = true
toml.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

term-transcript = { version = "=0.4.0-beta.1", path = "../lib" }

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
# Enables capturing output via pseudo-terminal (PTY).
portable-pty = ["term-transcript/portable-pty"]
# Enables tracing for main operations.
tracing = ["tracing-subscriber", "term-transcript/tracing"]
