[package]
name = "term-transcript"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["snapshot", "terminal", "SVG"]
categories = ["development-tools::testing", "visualization"]
description = "Snapshotting and snapshot testing for CLI / REPL applications"

[package.metadata.docs.rs]
all-features = true
# Set `docsrs` to enable unstable `doc(cfg(...))` attributes.
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Public dependencies (present in the public API).
quick-xml = { version = "0.31.0", optional = true }
handlebars = { version = "5.1.0", optional = true }
portable-pty = { version = "0.8.0", optional = true }

# Private dependencies (not exposed in the public API).
is-terminal = { version = "0.4.12", optional = true }
bytecount = "0.6.7"
os_pipe = "1.1.5"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1.40", optional = true }
pretty_assertions = { version = "1.0.0", optional = true }
termcolor = "1.4.1"
unicode-width = "0.1.11"

[dev-dependencies]
anyhow = "1.0.80"
assert_matches = "1.5.0"
doc-comment = "0.3.3"
test-casing = "0.1.3"
toml = "0.8.10"
tracing-capture = "0.1.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
version-sync = "0.9.2"

[features]
default = ["pretty_assertions", "svg", "test"]
# Rendering terminal transcripts into SVG snapshots
svg = ["handlebars", "serde", "serde_json"]
# Allows parsing transcripts from SVG snapshots and testing them
test = ["quick-xml", "is-terminal"]

[[test]]
name = "integration"
path = "tests/integration.rs"
required-features = ["tracing"]
