[package]
name = "styled-str"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["ANSI", "terminal", "styling", "color"]
categories = ["command-line-interface", "development-tools::testing"]
description = "Tools for parsing and managing ANSI-styled strings"

[dependencies]
# Public dependencies
anstyle.workspace = true

# Private dependencies
compile-fmt.workspace = true
pretty_assertions.workspace = true
unicode-width.workspace = true

[dev-dependencies]
anyhow.workspace = true
assert_matches.workspace = true

[lints]
workspace = true
