[package]
name = "term-transcript-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["snapshot", "terminal", "SVG"]
categories = ["command-line-utilities", "development-tools::testing", "visualization"]
description = "CLI wrapper for term-transcript"

[[bin]]
name = "term-transcript"
path = "src/main.rs"

[dependencies]
anstream.workspace = true
anstyle.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
handlebars.workspace = true
humantime.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

styled-str.workspace = true
term-transcript = { workspace = true, features = ["font-subset"] }

[dev-dependencies]
pretty_assertions.workspace = true
pulldown-cmark.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[features]
default = []
# Enables capturing output via pseudo-terminal (PTY).
portable-pty = ["term-transcript/portable-pty"]
# Enables tracing for main operations.
tracing = ["dep:tracing", "dep:tracing-subscriber", "term-transcript/tracing"]
