[package]
name = "term-transcript-rainbow"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rainbow-repl"
path = "src/bin/repl.rs"

[dependencies]
anstyle.workspace = true
anyhow.workspace = true

[dependencies.term-transcript]
path = "../../lib"
features = ["tracing"]

[dev-dependencies]
handlebars.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
test-casing = { workspace = true, features = ["tracing"] }

[features]
portable-pty = ["term-transcript/portable-pty"]
